--- a/src/index.html
+++ b/src/index.html
@@ -10,5 +10,7 @@
 </head>
 <body>
   <app-root></app-root>
+  <script src="/assets/js/jquery-3.4.1.min.js"></script>
+  <script src="/assets/js/cornify.js"></script>
 </body>
 </html>
